# Copyright 2018 Peter Williams <peter@newton.cx>
# Licensed under the MIT License.

[package]
name = "stund"
version = "0.1.3"
authors = ["Peter Williams <peter@newton.cx>"]
description = "An SSH tunnel maintenance daemon."
homepage = "https://github.com/pkgw/stund/"
documentation = "https://docs.rs/crate/stund"
repository = "https://github.com/pkgw/stund/"
readme = "README.md"
keywords = ["stund"]
categories = ["asynchronous"]
license = "MIT"

[workspace]

[dependencies]
atty = "0.2"
base64 = "0.10"
daemonize = "0.2"
failure = "0.1"
futures = "0.1"
libc = "0.2"
rand = "0.5"
state_machine_future = "0.1"
structopt = "0.2"
stund_protocol = { path = "protocol", version = "0.1.3" }
tokio-borrow-stdio = { path = "tokio-borrow-stdio", version = "0.1.0" }
tokio-core = "0.1"
tokio-io = "0.1"
tokio-pty-process = { path = "tokio-pty-process", version = "0.3.0" }
tokio-serde-bincode = "0.1"
tokio-signal = "0.1"
tokio-uds = "0.1"
