[package]
name = "stund"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]

[dependencies]
atty = "0.2"
bincode = "1.0"
byteorder = "1.2"
chan = "0.1"
chan-signal = "0.3"
daemonize = "0.2"
failure = "0.1"
futures = "0.1"
libc = "0.2"
pseudotty = { path = "../pseudotty", version = "0.1" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
state_machine_future = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-serde-json = { git = "https://github.com/carllerche/tokio-serde-json" }
tokio-signal = "0.1"
tokio-stdin = "0.1"
tokio-uds = "0.1"
unix_socket = "0.5"
