# Copyright 2018 Peter Williams <peter@newton.cx>
# Licensed under the MIT License.

[package]
name = "tokio-pty-process"
version = "0.3.1" # also update html_root_url in src/lib.rs
authors = ["Alex Crichton <alex@alexcrichton.com>", "Peter Williams <peter@newton.cx>"]
description = "Interact with a child process through a pseudo-TTY, asynchronously using Tokio"
homepage = "https://github.com/pkgw/stund/tree/master/tokio-pty-process"
documentation = "https://docs.rs/crate/tokio-pty-process"
repository = "https://github.com/pkgw/stund/"
readme = "README.md"
keywords = ["pseudotty", "tokio"]
categories = ["asynchronous", "os::unix-apis"]
license = "MIT/Apache-2.0"

[dependencies]
bytes = "0.4.11"
futures = "0.1"
libc = "0.2"
mio = "0.6"
tokio = "0.1.7"
tokio-io = "0.1.10"
tokio-signal = "0.2.1"
